--- a/compass_test/src/css/App.css
+++ b/compass_test/src/css/App.css
@@ -1,5 +1,12 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   text-align: left;
+}
+
+.content {
+  flex: 1;
 }
 
 .App-logo {
