--- a/compass_test/src/css/HeaderStyles.css
+++ b/compass_test/src/css/HeaderStyles.css
@@ -1,30 +1,45 @@
-/* Add this to your existing HeaderStyles.css */
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center; /* Center the header content horizontally */
   align-items: center;
   padding: 20px;
   background-color: #f4f4f4;
+  width: 100%;
+  box-sizing: border-box;
+  position: relative; /* Add position relative to position quiz button */
 }
 
 .header-logo {
   margin: 10px;
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  left: 20px; /* Adjust as necessary */
 }
 
 .header-logo img {
   height: 40px; /* Adjust the height as needed */
 }
 
+.nav-container {
+  display: flex;
+  justify-content: center; /* Center the nav menu within the header */
+  flex-grow: 1; /* Allow the nav container to grow and center itself */
+}
+
 .nav-menu {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between; /* Space links evenly */
   align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .menu-item {
   position: relative;
-  margin-left: 20px;
+  margin: 0 20px; /* Keep equal spacing between links */
 }
 
 .submenu {
@@ -34,6 +49,8 @@
   border: 1px solid #228573;
   padding: 10px;
   margin-top: 5px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
 }
 
 .menu-item:hover .submenu {
@@ -49,4 +66,16 @@ nav a {
 nav a.active {
   font-weight: bold;
   color: #007BFF;
+}
+
+/* Styles for the Quiz button */
+.quiz-button {
+  position: absolute;
+  right: 20px; /* Lock to the right */
+  background-color: #007BFF;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: bold;
 }
