--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -35,6 +35,22 @@
   color: #61dafb;
 }
 
+.go-back-button {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-top: 20px;
+}
+
+.go-back-button:hover {
+  background-color: #0056b3;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
