--- a/frontend/src/css/QuestionStyles.css
+++ b/frontend/src/css/QuestionStyles.css
@@ -130,10 +130,10 @@ input[type="radio"]:checked + label.likert-circle {
 /* Progress Bar Container */
 .progress-bar-container {
   position: fixed ; /* Fixed at the top of the window */
-  top: 15; /* Align it to the top. NEEDs to be below header*/
+  top: 10; /* Align it to the top./
   left: 0; /* Align to the left edge of the window */
   width: 100%; /* Full width of the window */
-  z-index: 100; /* Make sure it's above other content */
+  z-index: 1; /* Make sure it's above other content */
   background-color: white; /* Optional: Add a background color */
   padding: 10px; /* Optional: Add some padding for space around the bar */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a shadow for depth */
