--- a/frontend/src/components/layout/HeaderStyles.css
+++ b/frontend/src/components/layout/HeaderStyles.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center; /* Center the header content horizontally */
   align-items: center;
+  height: 80px;
   padding: 20px;
   background-color: #f4f4f4;
   width: 100%;
