new logo – still displayed too small

--- a/frontend/src/components/layout/HeaderStyles.css
+++ b/frontend/src/components/layout/HeaderStyles.css
@@ -116,3 +116,29 @@ nav a.active {
 .quiz-button:hover, .login-button:hover {
   background-color: #0056b3;
 }
+
+.logo-image {
+  width: 150px;
+  height: auto;
+}
+
+/* Tablets and small desktops */
+@media screen and (max-width: 992px) {
+  .logo-image {
+    width: 120px;
+  }
+}
+
+/* Landscape phones and small tablets */
+@media screen and (max-width: 768px) {
+  .logo-image {
+    width: 100px;
+  }
+}
+
+/* Portrait phones */
+@media screen and (max-width: 480px) {
+  .logo-image {
+    width: 80px;
+  }
+}
